--- a/BestRestaurant/Views/Cuisines/Create.cshtml
+++ b/BestRestaurant/Views/Cuisines/Create.cshtml
@@ -2,14 +2,23 @@
   Layout = "_Layout";
 }
 
-<h1>Add a cuisine</h1>
-<p>Add a cuisine here:</p>
+@model BestRestaurant.Models.Cuisine
 
-<form action="/cuisines" method="post">
-  <label for="cuisineName">Cuisine name</label>
-  <input id="cuisineName" name="cuisineName" type="text">
-  <button type="submit">Add</button>
-</form>
+
+<h1>Add a cuisine</h1>
+
+@using (Html.BeginForm())
+{
+  <p>@Html.LabelFor(model => model.Name)</p>
+  <p>@Html.TextBoxFor(model => model.Name)</p>
+
+  <input type="submit" value="Add new cuisine" class="btn btn-primary" />
+}
+<br>
+<p>@Html.ActionLink("Back to cuisines", "Index")</p>
+
 
 <p><a href="/">Back home</a></p>
-<p><a href="/cuisines">Back to cuisines.</a></p>
+
+
+
