--- a/BestRestaurant/Views/Restaurants/Create.cshtml
+++ b/BestRestaurant/Views/Restaurants/Create.cshtml
@@ -5,18 +5,27 @@
 @model BestRestaurant.Models.Restaurant
 
 <h4>Add a new restaurant</h4>
-
+<br>
 @using (Html.BeginForm())
 {
+  <p>
   @Html.LabelFor(model => model.Name)
   @Html.TextBoxFor(model => model.Name)
-
+  </p>
+  <p>
   @Html.LabelFor(model => model.Description)
   @Html.TextBoxFor(model => model.Description)
-
+  </p>
+  <p>
+  @Html.LabelFor(model => model.Location)
+  @Html.TextBoxFor(model => model.Location)
+  </p>
+  <p>
   @Html.LabelFor(model => model.Cuisine)
   @Html.DropDownList("CuisineId")
+  </p>
 
-  <input type="submit" value="Add new restaurant" class="btn btn-default" />
+  <input type="submit" value="Add new restaurant" class="btn btn-primary" />
 }
+<br>
 <p>@Html.ActionLink("Show all restaurants", "Index")</p>
