--- a/BestRestaurant/wwwroot/css/styles2.css
+++ b/BestRestaurant/wwwroot/css/styles2.css
@@ -60,6 +60,7 @@ a:active {
 
 body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: small;
   
 }
 
@@ -69,6 +70,7 @@ main {
   margin-right: 10%;
   text-align: left;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: small;
   background-color: white;
   padding: 35px;
   border-radius: 10px;
