--- a/BestRestaurant/Views/Restaurants/Index.cshtml
+++ b/BestRestaurant/Views/Restaurants/Index.cshtml
@@ -14,7 +14,11 @@
 
 @foreach (Restaurant restaurant in Model)
 {
-  <li>@Html.ActionLink($"{restaurant.Name}", $"{restaurant.Description}", "Details", new { id = restaurant.RestaurantId }) | @restaurant.Cuisine.Name | @restaurant.Location </li>
+  <li>@Html.ActionLink($"{restaurant.Name}", "Details", new { id = restaurant.RestaurantId }) | @restaurant.Cuisine.Name | </li>
+  <ul>
+    <li>@restaurant.Description</li>
+    <li>@restaurant.Location</li>
+  </ul>
 }
 <br>
 <p>@Html.ActionLink("Add new restaurant", "Create")</p>
